# EmfrpVM

./: README.md
emfrp-compiler/: .gitignore  Cargo.toml
emfrp-compiler/src/: ast.rs  grammer.lalrpop  insn.rs  main.rs  parser.rs  repl.rs
emfrp-compiler/src/compile/: compile.rs  compile_common.rs  dependency.rs  emit.rs  typecheck.rs  typed_ast.rs
emfrp-machine/arduino-uno/: .gitignore
emfrp-machine/arduino-uno/include/: config.h  io.h  machine.h
emfrp-machine/arduino-uno/src/: io.cpp  machine.cpp  main.cpp
emfrp-machine/esp32/main/: Benchmark.c  Benchmark.h  BenchmarkMain.c  BenchmarkMain.c.gen  BenchmarkMain2.c  CMakeLists.txt  benchmark_emfrp.mfrp  io.c  machine.c  main_emfrp_vm.c
emfrp-machine/esp32/main/include/: config.h  machine.h
emfrp-machine/microbit/: bthesis.code-workspace  microbit.code-workspace
emfrp-machine/microbit/include/: machine.h
emfrp-machine/microbit/src/: machine.cpp  main.cpp
